--- a/spec_local/deployment_gateway.yaml
+++ b/spec_local/deployment_gateway.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: krpdkr/slot_gateway
+          image: YOUR_REGISTRY_NAME/slot_gateway
           ports:
             - containerPort: 3000
           env:
